--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -15,6 +15,10 @@
             SelectedFolder,
             Blank()
         );
+        Set(
+            isModalOpen,
+            false
+        );
         UpdateContext({Files: ParseJSON(GetAll.Run().outputfiles)});
         UpdateContext(
             {
