--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -3,11 +3,11 @@
     LoadingSpinnerColor: =App.Theme.Colors.Primary
     OnHidden: |
         =ClearCollect(
-            inventureCollection,
+            colLines,
             Blank()
         );
         ClearCollect(
-            lockedItems,
+            colLocked,
             Blank()
         );
     OnVisible: |
