--- a/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
@@ -1217,7 +1217,7 @@
             Y: =0
             ZIndex: =4
 
-    con_ModalFade_2 As groupContainer.manualLayoutContainer:
+    con_PreModalFade As groupContainer.manualLayoutContainer:
         DropShadow: =DropShadow.Light
         Fill: =RGBA(0, 0, 0, 50%)
         Height: =Parent.Height
@@ -1230,7 +1230,7 @@
             =Parent.Width
         ZIndex: =2
 
-        con_Modal_2 As groupContainer.manualLayoutContainer:
+        con_PreModal As groupContainer.manualLayoutContainer:
             DropShadow: =DropShadow.ExtraBold
             Fill: =RGBA(255, 255, 255, 1)
             Height: =Parent.Height * 50%
@@ -1243,7 +1243,7 @@
             Y: =(Parent.Height - Self.Height) / 2
             ZIndex: =1
 
-            vrt_Modal_2 As groupContainer.verticalAutoLayoutContainer:
+            vrt_PreModal As groupContainer.verticalAutoLayoutContainer:
                 DropShadow: =DropShadow.ExtraBold
                 Height: =Parent.Height
                 LayoutAlignItems: =LayoutAlignItems.Stretch
